# reflectacon

./: CHANGELOG.md  README.md  reflectacon.cabal  shell.nix
scratch/: Scratch.hs
src/: Reflectacon.hs
src/Reflectacon/: Class.hs  GhcFacade.hs
test/: Spec.hs
