cabal-version:      3.0
name:               reflectacon
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Aaron Allen
maintainer:         aaronallen8455@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Reflectacon,
                      Reflectacon.Class,
                      Reflectacon.GhcFacade

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14.0.0,
                      ghc,
                      transformers
    hs-source-dirs:   src
    default-language: Haskell2010

library scratch
  build-depends: base, reflectacon
  hs-source-dirs: scratch
  exposed-modules: Scratch
  default-language: Haskell2010
  ghc-options: -fplugin Reflectacon

test-suite spec
  build-depends: base, reflectacon, HUnit, ghc
  hs-source-dirs: test
  main-is: Spec.hs
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  ghc-options: -fplugin Reflectacon
